style.css
:root {
  --dark-bg-color: #202020;
  --social-bg-color: #f4f4f4;
  --location-bg-color: #f2f2f2;
  --form-bg-color: #e4e4e4;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
}
/*
html,body
{
    width: 100%;
    height: 100%;
    overflow-x: hidden;
} */


/* GENERAL */
body {
  font-family: 'Montserrat', sans-serif;
  font-size: 1rem;
  line-height: 1.6;
  letter-spacing: 1px;
  color: rgb(34, 34, 34);

}

img{
    display: block;
    max-width: 100%;
}

input {
  border-radius: 3px;
  background: none;
}

/* Utility */

.container {
  max-width: 80%;
  width: 1200px;
  margin: 0 auto;
  text-align: center;
  padding: 5em 2em;
}

p {
  max-width: 50ch;
  text-align: justify;
  margin: 0 auto;
}

section {
    padding: 5em 2em;
    margin: 0 auto;
    text-align: center;
}



/* Headings */
h1,
h2,
h3 {
  line-height: 1.1;
  margin: 0;
  margin-bottom: 0.6em;
  text-transform: uppercase;
}

h1::after,
h2::after {
  content: "";
  display: block;
  height: 1px;
  width: 2em;
  margin: 0.5em auto 1em;
  background: black;
  opacity: 0.6;
}

h1::after {
  background: white;
}


/* NAVIGATION */
.hamburger {
  display: block;
  position: relative;
  background: black;
  transform: rotate(90deg);
}

.nav-open {
  display: block;
  transform: translateX(0);
}

.nav {
  position: fixed;
  background: black; /* FIXME:  */
  height: 100vh;
  top: 0;
  left: 0;
  width: 80%;
  display: none;
}

.nav_list {
  display: flex;
  justify-content: center;
}

.nav__list-item {
  list-style: none;
}

.nav__link {
  text-transform: uppercase;
  text-decoration: none;
}

.nav__link:hover,
.nav__link:focus {
  text-decoration: underline;
}

.nav__link:visited {
  color: slategray;
}

.hero {
  background-image: url('https://images.unsplash.com/photo-1585399000684-d2f72660f092?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1951&q=80');
  min-height: 100vh;
  color: white;
}

.hero {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}


.hero p {
  text-align: center;
  margin: 0 auto;
}

.arrow-down {
  border: solid white;
  border-width: 0 3px 3px 0;
  display: inline-block;
  padding: .5rem;
  transform: rotate(45deg);
}

.btn-default {
  display: inline-block;
  text-decoration: none;
  text-align: center;
  border: 2px solid black;
  color: black;
  background: none;
  text-transform: uppercase;
  font-size: 0.7em;
  font-weight: 800;
  margin: 0.8em auto;
  padding: 0.25em 1em;
  text-shadow: none;
  transition: transform ease-in-out .2s;

}

.btn-default:hover {
  transform: scale(1.1);
}

.text-decorative {
  border: 1px solid white;
  border-radius: 3px;
  padding: 0.3em 0.9em;
  text-transform: uppercase;
  text-align: center;
  display: inline-block;
  color: white;
}

.img-background {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

.img-decorative {
  padding: 10%;
}


.img-decorative__1 {
  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2004&q=80');
}
.img-decorative__2 {
  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1952&q=80');
}
.img-decorative__3 {
  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1530971013997-e06bb52a2372?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1972&q=80');
}
.img-decorative__4 {
  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1612831660296-0cd5841b89fb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2000&q=80');
}





.section__title {
  text-transform: uppercase;
  font-size: 1.2em;
}



/* OUR WORK */ /* FIXME:  */


.portfolio {
  display: grid;
  grid-template-columns:repeat(2, 1fr);
  grid-gap: .5em;
}

.portfolio__list-item + .portfolio__list-item {
  margin-left: 0.5em;
}

.portfolio__item {
  background: black;
  overflow: hidden;
}

.portfolio__img {
  object-fit: cover;
  transition: transform opacity 250ms linear;
}
.portfolio__img:hover {
    transform: scale(1.2);
    opacity: 0.8;
}


/* SOCIAL */

.section__social {
  /* background: #f2f2f4; */
  background: var(--social-bg-color)
}

.social-list {
    list-style: none;
    display: flex;
    justify-content: center;
    margin: 1em 0;
    padding: 0;
    font-size: 4em;
}

.social-list__item {
    margin: 0 .1em;
}

.social-list__link {
    padding: .2em;
    color: red;
    opacity: 0.6;
}

.social-list__link:hover {
  opacity: 1.3;
}


/* EMPLOYEES CARDS */
.employees {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-gap: .5em;
  margin-top: 2.5em;
  justify-content: center;
  text-align: center;

}

.card {
  display: flex;
  flex-direction: column;
  opacity: 0.5;
  color: white;
  justify-content: flex-end;
  text-decoration: none;
  min-width: 20%;
  min-height: 170px;
  /* margin: 0 auto */
  /* min-width: 100%; */
}

.card:hover {
  opacity: 1;
  border: 1px solid black;
}

.card:hover .card-inner {
  opacity: 1;
}


.card-inner {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  opacity: 0;

}



.card-title {
  font-size: .8em;
  font-weight: 800;
}

.card-body {
  font-size: 0.5em;
}


/* #card-1 {
  background-image: url("https://images.unsplash.com/photo-1573007974656-b958089e9f7b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
} */

#card-1 {
  background-image: url("https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80");
}

.card__hiring {
  color: black;
  background: none;
  opacity: 1;
  border-bottom: 1px solid black;

}

.card__hiring:hover {
  border: none;
  border-bottom: 1px solid black;
}

.section__location{
  background: var(--location-bg-color);
}

.section__form {
  background: var(--form-bg-color);
  display: flex;
  flex-wrap: wrap;
}


.section__location,
.section__form {
  width: 100%;
}

/* FORM */
.form__text-input {
  padding: .25em;
  margin-bottom: 1em;
  border-width: 0 0 1px 0;
}

.section__contacts {
  display: flex;
  justify-content: center;
  flex-direction: column;
}


.footer {
  background: var(--dark-bg-color);
}

.copyright {
  font-size: 0.4em;
  color: white;
}




/* MEDIA QUERIES */
@media screen and (min-width: 800px) {

  body {
    font-size: 1.375rem;
  }

  .nav__list-item + .nav__list-item  {
    margin-left: 2em;
  }

  .portfolio {
    grid-template-columns:repeat(3, 1fr);
  }

  .portfolio__img {
    min-height: 250px;
  }

  .social-list {
    font-size: 5em;
  }

  .social-list__item {
      margin: 0 .5em;
  }

  .social-list__link {
      padding: .5em;
      color: red;
      opacity: 0.6;
  }

  .section__contacts {
    flex-direction: row;
  }

  .section__location {

  }


  .section__form {
    display:  block;
  }

  .text-decorative {
    border: 4px solid white;
    letter-spacing: 3px;
  }

  .btn-default {
    border: 3px solid black;
    letter-spacing: 3px;
    margin-top: 1.5em;
  }


  .employees {
    display: grid;
    grid-row-gap: .5em;
    grid-template-columns: repeat(3, 1fr);
    grid-template-areas: "card card card"
                          "hiring hiring hiring";

  }

  .card__hiring {
    grid-column: 1 / span 3;
  }


}

@media screen and (min-width: 1100px) {

  body {
    font-size: 1.5rem;
  }


  .portfolio__img {
    min-height: 350px;
  }

  .employees {
    grid-row: 1;
    grid-template-columns: repeat(4, 1fr);
    grid-template-areas: "card card card card";
  }

  .card__hiring {
      grid-column: none;
      grid-column-start: 4;
  }


  .card {
    min-width: 20%;
    min-height: 270px;
  }
}

